contact details added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,6 +8,14 @@
     <hr>
     <h3>Need more information or have specific requests? We're here to help! Our team is dedicated to ensuring you have an unforgettable stay.</h3>
     <h3>Get in touch with us, and we'll be delighted to assist you.</h3>
+    <img src="images.html/phone icon.png"height="25px"><a href="Tel:9881748878">
+        <a href="9881748878">
+        Call us
+    </a>  &nbsp;  &nbsp; <br/>
+    <img src="images.html/email icon.png"height="25px">
+    <a href ="contactyourhotel@gmail.com"> 
+        Email us
+    </a>
 
 
     
