--- a/pages/dancing.html
+++ b/pages/dancing.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bike Parking</title>
+    <title>Dancing</title>
 </head>
 <body>
-    <h2>Bike Parking</h2>
+    <h2>Dancing</h2>
 </body>
 </html>
