--- a/pages/sports.html
+++ b/pages/sports.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bike Parking</title>
+    <title>Sports</title>
 </head>
 <body>
-    <h2>Bike Parking</h2>
+    <h2>Good for watching sports</h2>
 </body>
 </html>
