--- a/pages/accept-reservation.html
+++ b/pages/accept-reservation.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bike Parking</title>
+    <title>Accept Reservation</title>
 </head>
 <body>
-    <h2>Bike Parking</h2>
+   <h2>Accept Reservation</h2>
 </body>
 </html>
