--- a/pages/live-performance.html
+++ b/pages/live-performance.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bike Parking</title>
+    <title>Live Performances</title>
 </head>
 <body>
-    <h2>Bike Parking</h2>
+    <h2>Live Performances</h2>
 </body>
 </html>
