--- a/pages/outdoor-seating.html
+++ b/pages/outdoor-seating.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bike Parking</title>
+    <title>Outdoor Seating</title>
 </head>
 <body>
-    <h2>Bike Parking</h2>
+    <h2>Outdoor Seating</h2>
 </body>
 </html>
