--- a/pages/specialities.html
+++ b/pages/specialities.html
@@ -4,7 +4,22 @@
     <title>Specialities</title>
 </head>
 <body>
-    <h2>Specialities</h2>
+    <h1>Specialities</h1>
+    <h1><span style="color: orangered;"> Special menu of Restaurant </span> </h1>
+    <br/><br/>
+    <img src="./../images/food1.jpg" height="500" width="500"/>
+    <img src="./../images/food2.jpg" height="500" width="500"/>
+    <img src="./../images/food3.jpg" height="500" width="500"/>
+    <img src="./../images/food4.jpg" height="500" width="500"/>
+    <img src="./../images/food5.jpg" height="500" width="500"/>
+    <img src="./../images/food6.jpg" height="500" width="500"/>
+    <img src="./../images/food7.jpg" height="500" width="500"/>
+    <img src="./../images/food 8.jpg" height="500" width="500"/>
+    <img src="./../images/food9.jpg" height="500" width="500"/>
+    <img src="./../images/food10.jpg" height="500" width="500"/>
+    <img src="./../images/food11.webp" height="500" width="800"/>
+    
+
     
 </body>
 </html>
