--- a/pages/bike-parking.html
+++ b/pages/bike-parking.html
@@ -4,6 +4,10 @@
     <title>Bike Parking</title>
 </head>
 <body>
-    <h2>Bike Parking</h2>
+    <h1><span style="color: rgb(255, 0, 230);">Bike Parking </span> </h1>
+    <img src="./../images/bike1.jpg" height="500" width="900"/><br/>
+    <img src="./../images/bike2.jpg" height="500" width="900"/><br/>
+    <img src="./../images/bike3.jpg" height="500" width="900"/><br/>
+    <img src="./../images/bike4.jpg" height="500" width="900"/><br/>
 </body>
 </html>
