car parking updated

--- a/pages/car-parking.html
+++ b/pages/car-parking.html
@@ -4,6 +4,9 @@
     <title>Car Parking</title>
 </head>
 <body>
-    <h2>Car Parking</h2>
+    <h1><span style="color: seagreen;">Car Parking </span> </h1>
+    <img src="./../images/car1.jpg" height="900" width="1300"/><br/><br/>
+    <img src="./../images/car2.jpg" height="900" width="1300"/><br/><br/>
+    <img src="./../images/car3.jpg" height="900" width="1300"/><br/><br/>
 </body>
 </html>
