video folder created

--- a/pages/live-performance.html
+++ b/pages/live-performance.html
@@ -4,6 +4,18 @@
     <title>Live Performances</title>
 </head>
 <body>
-    <h2>Live Performances</h2>
+    <h1><span style="color: seagreen;">Live Performances </span> </h1>
+    <img src="./../images/singing1.jpg" height="700" width="800"/><br/><br/>
+    <img src="./../images/singing2.jpg" height="700" width="800"/><br/><br/>
+    <img src="./../images/singing3.jpg" height="700" width="800"/><br/><br/>
+    <video
+    controls
+    loop
+    height="500px" 
+    width="900px"
+    poster="./../images/singing-poster.webp">
+    <source src="./../video/singing-video-1 .mp4" type="video/mp4"/>
+
+    </video>
 </body>
 </html>
