--- a/pages/dancing.html
+++ b/pages/dancing.html
@@ -4,6 +4,19 @@
     <title>Dancing</title>
 </head>
 <body>
-    <h2>Dancing</h2>
+    <h1><span style="color: rgb(245, 86, 7);">Dancing</span> </h1>
+    <img src="./../images/dancing1.jpg" height="500" width="500"><br/><br/><br/>
+    <img src="./../images/dancing2.jpg" height="500" width="500"><br/><br/><br/>
+    <img src="./../images/dancing3.jpg" height="500" width="500"><br/><br/><br/>
+    <img src="./../images/dancing4.jpg" height="500" width="500"><br/><br/><br/>
+    <video
+    controls
+    loop
+    height="500px" 
+    width="900px"
+    poster="./../images/dancing-poster.jpg">
+    <source src="./../video/dancing-video-1.mp4" type="video/mp4"/>
+
+    </video>
 </body>
 </html>
