--- a/pages/cosy.html
+++ b/pages/cosy.html
@@ -4,6 +4,9 @@
     <title>Cosy</title>
 </head>
 <body>
-    <h2>Cosy</h2>
+    <h1>Cosy</h1>
+    <img src="./../images/cosy1.jpg" height="600" width="600">
+    <img src="./../images/cosy2.jpg" height="600" width="600">
+    <img src="./../images/cosy3.jpg" height="600" width="600">
 </body>
 </html>
