--- a/pages/dancing.html
+++ b/pages/dancing.html
@@ -4,7 +4,7 @@
     <title>Dancing</title>
 </head>
 <body>
-    <h1><span style="color: rgb(245, 86, 7);">Dancing</span> </h1>
+    <h1>Dancing</h1>
     <img src="./../images/dancing1.jpg" height="500" width="500"><br/><br/><br/>
     <img src="./../images/dancing2.jpg" height="500" width="500"><br/><br/><br/>
     <img src="./../images/dancing3.jpg" height="500" width="500"><br/><br/><br/>
