--- a/pages/live-performance.html
+++ b/pages/live-performance.html
@@ -4,7 +4,7 @@
     <title>Live Performances</title>
 </head>
 <body>
-    <h1><span style="color: seagreen;">Live Performances </span> </h1>
+    <h1>Live Performances </h1>
     <img src="./../images/singing1.jpg" height="700" width="800"/><br/><br/>
     <img src="./../images/singing2.jpg" height="700" width="800"/><br/><br/>
     <img src="./../images/singing3.jpg" height="700" width="800"/><br/><br/>
