--- a/pages/outdoor-seating.html
+++ b/pages/outdoor-seating.html
@@ -4,6 +4,9 @@
     <title>Outdoor Seating</title>
 </head>
 <body>
-    <h2>Outdoor Seating</h2>
+    <h1>Outdoor Seating</h1>
+    <img src="./../images/os-1.jpg" height="700" width="600"/>
+    <img src="./../images/os-2.jpg" height="700" width="600"/>
+    <img src="./../images/os-3.jpg" height="700" width="600"/>
 </body>
 </html>
