--- a/pages/bike-parking.html
+++ b/pages/bike-parking.html
@@ -4,7 +4,7 @@
     <title>Bike Parking</title>
 </head>
 <body>
-    <h1><span style="color: rgb(255, 0, 230);">Bike Parking </span> </h1>
+    <h1>Bike Parking </h1>
     <img src="./../images/bike1.jpg" height="500" width="900"/><br/>
     <img src="./../images/bike2.jpg" height="500" width="900"/><br/>
     <img src="./../images/bike3.jpg" height="500" width="900"/><br/>
