--- a/pages/car-parking.html
+++ b/pages/car-parking.html
@@ -4,7 +4,7 @@
     <title>Car Parking</title>
 </head>
 <body>
-    <h1><span style="color: seagreen;">Car Parking </span> </h1>
+    <h1>Car Parking </h1>
     <img src="./../images/car1.jpg" height="900" width="1300"/><br/><br/>
     <img src="./../images/car2.jpg" height="900" width="1300"/><br/><br/>
     <img src="./../images/car3.jpg" height="900" width="1300"/><br/><br/>
