--- a/pages/specialities.html
+++ b/pages/specialities.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Specialities</h1>
-    <h1><span style="color: orangered;"> Special menu of Restaurant </span> </h1>
+    <h1> Special menu of Restaurant </h1>
     <br/><br/>
     <img src="./../images/food1.jpg" height="500" width="500"/>
     <img src="./../images/food2.jpg" height="500" width="500"/>
