--- a/pages/events.html
+++ b/pages/events.html
@@ -4,6 +4,10 @@
     <title>Events</title>
 </head>
 <body>
-    <h2>Events</h2>
+    <h1>Events</h1>
+    <b>These are the events we conduct & many more</b><br/><br/>
+    <img src="./../images/event1.jpg" height="500" width="500">
+    <img src="./../images/event2.jpg" height="500" width="500">
+    <img src="./../images/event3.jpg" height="500" width="500">
 </body>
 </html>
