--- a/pages/sports.html
+++ b/pages/sports.html
@@ -5,5 +5,14 @@
 </head>
 <body>
     <h2>Good for watching sports</h2>
+    <img src="./../images/sport1.jpg" height="500" width="500">&nbsp;&nbsp;&nbsp;
+    <img src="./../images/sport2.jpg" height="500" width="500">&nbsp;&nbsp;&nbsp;
+    <img src="./../images/sport3.jpg" height="500" width="500">&nbsp;&nbsp;&nbsp;
+    <video
+    controls
+    loop
+    height="500" width="500">
+    <source src="./../video/sport-video-1.mp4" type="video/mp4"/>
+    </video>
 </body>
 </html>
