--- a/pages/accept-reservation.html
+++ b/pages/accept-reservation.html
@@ -4,6 +4,10 @@
     <title>Accept Reservation</title>
 </head>
 <body>
-   <h2>Accept Reservation</h2>
+   <h1>Accept Reservation</h1>
+   <h2>We Accept Reservation -</h2><br/><br/>
+   <img src="./../images/reserv1.jpeg" height="300" width="300">&nbsp;&nbsp;&nbsp;
+   <img src="./../images/reserv2.jpg" height="300" width="300">&nbsp;&nbsp;&nbsp;
+   <img src="./../images/reserv3.jpeg" height="300" width="500">&nbsp;&nbsp;&nbsp;
 </body>
 </html>
