--- a/pages/dancing.html
+++ b/pages/dancing.html
@@ -5,10 +5,10 @@
 </head>
 <body>
     <h1>Dancing</h1>
-    <img src="./../images/dancing1.jpg" height="500" width="500"><br/><br/><br/>
-    <img src="./../images/dancing2.jpg" height="500" width="500"><br/><br/><br/>
-    <img src="./../images/dancing3.jpg" height="500" width="500"><br/><br/><br/>
-    <img src="./../images/dancing4.jpg" height="500" width="500"><br/><br/><br/>
+    <img src="./../images/dancing1.jpg" height="500" width="500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="./../images/dancing2.jpg" height="500" width="500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="./../images/dancing3.jpg" height="500" width="500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="./../images/dancing4.jpg" height="500" width="500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <video
     controls
     loop
