--- a/pages/specialities.html
+++ b/pages/specialities.html
@@ -7,17 +7,17 @@
     <h1>Specialities</h1>
     <h1> Special menu of Restaurant </h1>
     <br/><br/>
-    <img src="./../images/food1.jpg" height="500" width="500"/>
-    <img src="./../images/food2.jpg" height="500" width="500"/>
-    <img src="./../images/food3.jpg" height="500" width="500"/>
-    <img src="./../images/food4.jpg" height="500" width="500"/>
-    <img src="./../images/food5.jpg" height="500" width="500"/>
-    <img src="./../images/food6.jpg" height="500" width="500"/>
-    <img src="./../images/food7.jpg" height="500" width="500"/>
-    <img src="./../images/food 8.jpg" height="500" width="500"/>
-    <img src="./../images/food9.jpg" height="500" width="500"/>
-    <img src="./../images/food10.jpg" height="500" width="500"/>
-    <img src="./../images/food11.webp" height="500" width="800"/>
+    <img src="./../images/food1.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food2.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food3.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food4.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food5.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food6.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food7.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food 8.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food9.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food10.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food11.webp" height="500" width="800"/>&nbsp;&nbsp;&nbsp;
     
 
     
