New About file Added and Some Images &  Pages Where added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index file</title>
+    <title>Image of restaurants</title>
 </head>
 <body>
-    <h1>Index file</h1>
+    <h1><u><i><b> Icon Images of Restaurant:-</b></i></u></h1>
+    <img src="./images/old.jpeg" height="50px" />
+    <a href="./pages/old.html">Old</a> <br /> <br />
+
+     <img src="./images/restaurant.jpeg" height="50px" />
+    <a href="./pages/imgrestaurant.html">Restaurant</a> <br /> <br />
+
+    <img src="./images/Restro.jpeg" height="50px" />
+    <a href="./pages/Restro.html">Restro</a> <br /> <br />
+
+   
+    <img src="./images/Youtube.png" height="50px" />
+    <a href="./pages/youtube.html">Youtube</a> <br /> <br /> 
+
+
+    <img src="./images/old.jpeg" height="50px" />
+    <a href="./pages/old.html">Old Image</a> <br /> <br />
+
+
+    <img src="./images/Since.jpeg" height="50px" />
+    <a href="./pages/1999.html">1999 Icon</a> <br /> <br /> 
+
+    <img src="./images/oldd.png" height="50px" />
+    <a href="./pages/oldd.html"> Icon Image</a> <br /> <br /> 
+
+
+    <img src="./imaages/Welcome.jpeg" height="50px" />
+    <a href="./pages/icon.html">Simple Image of Welcome</a> <br /> <br />
 </body>
 </html>
