--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="./pages/oldd.html"> Icon Image</a> <br /> <br /> 
 
 
-    <img src="./imaages/Welcome.jpeg" height="50px" />
+    <img src="./images/Welcome.jpeg" height="50px" />
     <a href="./pages/icon.html">Simple Image of Welcome</a> <br /> <br />
 </body>
 </html>
