--- a/pages/imageofrestaurant.html
+++ b/pages/imageofrestaurant.html
@@ -6,10 +6,10 @@
 <body>
     <h1><u><i><b> Icon Images of Restaurant:-</b></i></u></h1>
     <img src="./images/old.jpeg" height="50px" />
-    <a href="./pages/old.html">Old</a> <br /> <br />
+    <a href="old.html">Old</a> <br /> <br />
 
      <img src="./images/restaurant.jpeg" height="50px" />
-    <a href="./pages/imgrestaurant.html">Restaurant</a> <br /> <br />
+    <a href="imgrestaurant.html">Restaurant</a> <br /> <br />
 
     <img src="./images/Restro.jpeg" height="50px" />
     <a href="./pages/Restro.html">Restro</a> <br /> <br />
