--- a/pages/about.html
+++ b/pages/about.html
@@ -49,7 +49,10 @@
 <hr>
 <h1><b><i><u>*This is Old Restaurant in </i><del>1999 <img src="./../images/oldd.png"
   height="150px"width="250px">
-  </del></i></b> </u></h1> 
-<img src="./../images/old.jpeg" width="400px"/>
+  </del></i></b> </u></h1>
+  <a href="imageofrestaurant.html">
+     <img src="./../images/old.jpeg" width="400px"/>
+     <b>more</b>
+    </a>
 </body>
 </html>
