--- a/pages/imageofrestaurant.html
+++ b/pages/imageofrestaurant.html
@@ -5,32 +5,32 @@
 </head>
 <body>
     <h1><u><i><b> Icon Images of Restaurant:-</b></i></u></h1>
-    <img src="./images/old.jpeg" height="50px" />
+    <img src="./../images/old.jpeg" height="50px" />
     <a href="old.html">Old</a> <br /> <br />
 
-     <img src="./images/restaurant.jpeg" height="50px" />
+     <img src="./../images/restaurant.jpeg" height="50px" />
     <a href="imgrestaurant.html">Restaurant</a> <br /> <br />
 
-    <img src="./images/Restro.jpeg" height="50px" />
-    <a href="./pages/Restro.html">Restro</a> <br /> <br />
+    <img src="./../images/Restro.jpeg" height="50px" />
+    <a href="Restro.html">Restro</a> <br /> <br />
 
    
-    <img src="./images/Youtube.png" height="50px" />
-    <a href="./pages/youtube.html">Youtube</a> <br /> <br /> 
+    <img src="./../images/Youtube.png" height="50px" />
+    <a href="youtube.html">Youtube</a> <br /> <br /> 
 
 
-    <img src="./images/old.jpeg" height="50px" />
-    <a href="./pages/old.html">Old Image</a> <br /> <br />
+    <img src="./../images/old.jpeg" height="50px" />
+    <a href="old.html">Old Image</a> <br /> <br />
 
 
-    <img src="./images/Since.jpeg" height="50px" />
-    <a href="./pages/1999.html">1999 Icon</a> <br /> <br /> 
+    <img src="./../images/Since.jpeg" height="50px" />
+    <a href="1999.html">1999 Icon</a> <br /> <br /> 
 
-    <img src="./images/oldd.png" height="50px" />
-    <a href="./pages/oldd.html"> Icon Image</a> <br /> <br /> 
+    <img src="./../images/oldd.png" height="50px" />
+    <a href="oldd.html"> Icon Image</a> <br /> <br /> 
 
 
-    <img src="./images/Welcome.jpeg" height="50px" />
-    <a href="./pages/icon.html">Simple Image of Welcome</a> <br /> <br />
+    <img src="./../images/Welcome.jpeg" height="50px" />
+    <a href="icon.html">Simple Image of Welcome</a> <br /> <br />
 </body>
 </html>
