add for aboutpage

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div>
       <p><b>Quick Links</b></p>
       <ul>
-        <li><a href="#"><b>About</b></a></li>
+        <li><a href="./pages/about.html"><b>About</b></a></li>
         <li><a href="#"><b>Blogs</b></a></li>
         <li><a href="#"><b>Room</b></a></li>
         <li><a href="#"><b>Feedback</b></a></li>
