correction for aboutpage

--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,9 @@
   &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
   &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
   &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
-  <b>Home</b>
+  <a href="./../index.html">Home</a>
+  &nbsp; &nbsp;
+  <b>About</b>
   &nbsp; &nbsp;
   <a href="#">Menu</a>
   &nbsp;&nbsp;
