gallery page change

--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -96,7 +96,7 @@
 
  <a href="#">
     <img src="./../icon/Twitter.png" alt="Twitter icon" width="20px"height=20px> &nbsp Twitter
- </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
  <a href="#">
     <img src="./../icon/youtube.png" alt="youtube icon" width="20px" height="20px" >&nbsp; Youtube
