--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -5,7 +5,7 @@
     </head>
     <body>
        <nav>
-        <b>Rajeshahi Family Restaurant</b> &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+        <b>Rajeshahi Family Restaurant</b>  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
         &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
         &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
         &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
@@ -32,25 +32,29 @@
     
         <br />
        </nav>
+
     <b id="hotel Gallery">Hotel Gallery<b>
-    <br>
+    <br/>
+
     <a href="#videos">videos</a>
-    <br>
+    <br />
+
     <img src="./../image/outdoor.jpg" alt="oudoor image" width="350px" height="250px"> &nbsp; &nbsp;&nbsp;
 
-<img src="./../image/pull.jpg" alt="pull image" width="350px"
- height="250px"> &nbsp;&nbsp;&nbsp;
+    <img src="./../image/pull.jpg" alt="pull image" width="350px"
+     height="250px"> &nbsp;&nbsp;&nbsp;
 
     <img src="./../image/reception.jpg" alt="hotel reception" width="350px" height="250px"> &nbsp;&nbsp;&nbsp;
-    <br>
-    <br>
+    <br />
+    <br />
      <img src="./../image/sitting.jpg" alt="hotel outdoor" width="350px" height="250px"> &nbsp;&nbsp;&nbsp;
      <img src="./../image/rooms.jpg" alt="rooms image" width="350px" height="250px"> &nbsp;&nbsp;&nbsp;&nbsp; 
      <img src="./../image/Lobby.jpg" alt="lobby image" width="350px" height="250px"> &nbsp;&nbsp; &nbsp; 
-     <br>
+     <br />
+
      <h3 id="videos">Videos</h3>
      <a href="#hotel Gallery">Hotel Gallery</a>
-     <br>
+     <br />
      <video controls muted width="400px" height="300px" poster="./../image/hotel1.jpg">
         <source src="./../video/sea.mp4" type="video/mp4">
         </video>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -58,8 +62,8 @@
      <video controls muted width="400px" height="300px" poster="./../image/window.jpg">
         <source src="./../video/interior.mp4" type="video/mp4">
      </video>
-     <br>
-     <hr>
+     <br />
+     <hr />
 
     <h3>Quick Links</h3>
    <a href="about.html">
@@ -68,38 +72,39 @@
 
     <a href="Rooms.html">
     <img src="./../icon/rooms.png" alt="rooms icon" width="20px" height="20px">&nbsp; Rooms
-    </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
     <a href="Blogs.html">
-    <img src="./../icon/blogs.png" alt="blog icon" width="20px" height="20px">&nbsp; Blog</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="./../icon/blogs.png" alt="blog icon" width="20px" height="20px">&nbsp; Blog</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
     <a href="./../code/support.html">
-        <img src="./../icon/support.png" alt="support icon" width="20px" height="20px">&nbsp; Support</a>&nbsp;
+        <img src="./../icon/support.png" alt="support icon" width="20px" height="20px">&nbsp; Support</a> &nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
         <a href="staff-Details">
-            <img src="./../icon/staff.png" alt="staff icon" width="20px" height="20px">&nbsp; Staff-Details
-        </a>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="./../icon/staff.png" alt="staff icon" width="20px" height="20px"> &nbsp; Staff-Details
+        </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
     <a href="feedback.html">
-        <img src="./../icon/feedback.png" alt="feeback icon" width="20px" height="20px">&nbsp; Feedback
+        <img src="./../icon/feedback.png" alt="feeback icon" width="20px" height="20px"> &nbsp; Feedback
     </a>
-  <hr>
+  <hr />
 
   <h2>Follow us</h2>
   <a href="#">
     <img src="./../icon/instagram.png" alt="instagram icon" width="20px" height="20px"> &nbsp; Instagram
-  </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
   <a href="#">
-    <img src="./../icon/facebook.png" alt="facebook icon" width="20px" height="20px"> &nbsp Facebook
-  </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="./../icon/facebook.png" alt="facebook icon" width="20px" height="20px"> &nbsp; Facebook
+  </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
  <a href="#">
-    <img src="./../icon/Twitter.png" alt="Twitter icon" width="20px"height=20px> &nbsp Twitter
- </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="./../icon/Twitter.png" alt="Twitter icon" width="20px"height=20px> &nbsp; Twitter
+ </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
  <a href="#">
-    <img src="./../icon/youtube.png" alt="youtube icon" width="20px" height="20px" >&nbsp; Youtube
+    <img src="./../icon/youtube.png" alt="youtube icon" width="20px" height="20px"> &nbsp; Youtube
  </a>
 
     </body>
