added to the gallery page for home

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     &nbsp; &nbsp;
     <a href="#">Menu</a>
     &nbsp;&nbsp;
-    <a href="#">Gallery</a>
+    <a href="./pages/Gallery.html">Gallery</a>
     &nbsp;&nbsp;
     <a href="#">Contact</a>
     &nbsp;&nbsp;
