--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -39,7 +39,7 @@
     <a href="#videos">videos</a>
     <br />
 
-    <img src="./../image/outdoor.jpg" alt="oudoor image" width="350px" height="250px"> &nbsp; &nbsp;&nbsp;
+    <img src="./../images/outdoor.jpg" alt="oudoor image" width="350px" height="250px"> &nbsp; &nbsp;&nbsp;
 
     <img src="./../image/pull.jpg" alt="pull image" width="350px"
      height="250px"> &nbsp;&nbsp;&nbsp;
