nav bar add to gallery

--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -18,12 +18,12 @@
         &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
         &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
     
-        <b>Home</b>
+        <a href="./../index.html">Home</a>
+        &nbsp;&nbsp;
+        <a href="./../Menu.html">Menu</a>
+        &nbsp;&nbsp;
+        <b>Gallery</b>
         &nbsp; &nbsp;
-        <a href="#">Menu</a>
-        &nbsp;&nbsp;
-        <a href="#">Gallery</a>
-        &nbsp;&nbsp;
         <a href="#">Contact</a>
         &nbsp;&nbsp;
         <a href="#">Login</a>
@@ -41,15 +41,15 @@
 
     <img src="./../images/outdoor.jpg" alt="oudoor image" width="350px" height="250px"> &nbsp; &nbsp;&nbsp;
 
-    <img src="./../image/pull.jpg" alt="pull image" width="350px"
+    <img src="./../images/pull.jpg" alt="pull image" width="350px"
      height="250px"> &nbsp;&nbsp;&nbsp;
 
-    <img src="./../image/reception.jpg" alt="hotel reception" width="350px" height="250px"> &nbsp;&nbsp;&nbsp;
+    <img src="./../images/reception.jpg" alt="hotel reception" width="350px" height="250px"> &nbsp;&nbsp;&nbsp;
     <br />
     <br />
-     <img src="./../image/sitting.jpg" alt="hotel outdoor" width="350px" height="250px"> &nbsp;&nbsp;&nbsp;
-     <img src="./../image/rooms.jpg" alt="rooms image" width="350px" height="250px"> &nbsp;&nbsp;&nbsp;&nbsp; 
-     <img src="./../image/Lobby.jpg" alt="lobby image" width="350px" height="250px"> &nbsp;&nbsp; &nbsp; 
+     <img src="./../images/sitting.jpg" alt="hotel outdoor" width="350px" height="250px"> &nbsp;&nbsp;&nbsp;
+     <img src="./../images/rooms.jpg" alt="rooms image" width="350px" height="250px"> &nbsp;&nbsp;&nbsp;&nbsp; 
+     <img src="./../images/Lobby.jpg" alt="lobby image" width="350px" height="250px"> &nbsp;&nbsp; &nbsp; 
      <br />
 
      <h3 id="videos">Videos</h3>
