nav bar add to home page

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
     <b>Home</b>
     &nbsp; &nbsp;
-    <a href="#">Menu</a>
+    <a href="./Menu.html">Menu</a>
     &nbsp;&nbsp;
     <a href="./pages/Gallery.html">Gallery</a>
     &nbsp;&nbsp;
-    <a href="#">Contact</a>
+    <a href="./pages/contact.html">Contact</a>
     &nbsp;&nbsp;
-    <a href="#">Login</a>
+    <a href="./pages/login.html">Login</a>
     <br />
     <hr />
 
@@ -120,9 +120,9 @@
       <p><b>Quick Links</b></p>
       <ul>
         <li><a href="./pages/about.html"><b>About</b></a></li>
-        <li><a href="#"><b>Blogs</b></a></li>
-        <li><a href="#"><b>Room</b></a></li>
-        <li><a href="#"><b>Feedback</b></a></li>
+        <li><a href="./pages/Blog.html"><b>Blogs</b></a></li>
+        <li><a href="./pages/room.html"><b>Room</b></a></li>
+        <li><a href="./pages/Highlight.html"><b>Highlight</b></a></li>
         <!-- <li><a href="#">Contact</a></li> -->
       </ul>
     </div>
