added quick links

--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -24,9 +24,9 @@
         &nbsp;&nbsp;
         <b>Gallery</b>
         &nbsp; &nbsp;
-        <a href="#">Contact</a>
+        <a href="./contact.html">Contact</a>
         &nbsp;&nbsp;
-        <a href="#">Login</a>
+        <a href="./login.html">Login</a>
         <br />
         <hr />
     
@@ -66,18 +66,18 @@
      <hr />
 
     <h3>Quick Links</h3>
-   <a href="about.html">
+   <a href="./about.html">
     <img src="./../icon/about.png" alt="about icon" width="20px" height="20px"> &nbsp; About
     </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-    <a href="Rooms.html">
+    <a href="./room.html">
     <img src="./../icon/rooms.png" alt="rooms icon" width="20px" height="20px">&nbsp; Rooms
     </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-    <a href="Blogs.html">
+    <a href="./Blog.html">
     <img src="./../icon/blogs.png" alt="blog icon" width="20px" height="20px">&nbsp; Blog</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-    <a href="./../code/support.html">
+    <a href="./support.html">
         <img src="./../icon/support.png" alt="support icon" width="20px" height="20px"> &nbsp; Support</a> &nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
