--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
       <p><b>Quick Links</b></p>
       <ul>
         <li><a href="./pages/about.html"><b>About</b></a></li>
-        <li><a href="#"><b>Blogs</b></a></li>
-        <li><a href="#"><b>Room</b></a></li>
-        <li><a href="#"><b>Feedback</b></a></li>
+        <li><a href="./pages/Blog.html"><b>Blogs</b></a></li>
+        <li><a href="./pages/room.html"><b>Room</b></a></li>
+        <li><a href="./pages/Highlight.html"><b>Highlight</b></a></li>
         <!-- <li><a href="#">Contact</a></li> -->
       </ul>
     </div>
