all links added to highlight

--- a/pages/accept-reservation.html
+++ b/pages/accept-reservation.html
@@ -5,7 +5,20 @@
 </head>
 <body>
    <h1>Accept Reservation</h1>
-   <h2>We Accept Reservation -</h2><br/><br/>
+   <a href="specialities.html">Specialities</a>&nbsp;&nbsp;
+    <a href="bike-parking.html">Bike Parking</a>&nbsp;&nbsp;
+    <a href="car-parking.html">Car Parking</a>&nbsp;&nbsp;
+    <a href="live-performance.html">Live Performance</a>&nbsp;&nbsp;
+    <a href="dancing.html">Dancing</a>&nbsp;&nbsp;
+    <a href="cosy.html">Cosy</a>&nbsp;&nbsp;
+    <a href="outdoor-seating.html">Outdoor Seating</a>&nbsp;&nbsp;
+    <a href="events.html">Events</a>&nbsp;&nbsp;
+    <a href="accept-reservation.html">Accept Reservation</a>&nbsp;&nbsp;
+    <a href="sports.html">Good for watching Sports</a>&nbsp;&nbsp;
+    <br/><br/>
+    <hr/>
+   <h2>We Accept Reservation -</h2>
+   <a href="tel:7219557778">Get in Touch</a><br/><br/><hr/>
    <img src="./../images/reserv1.jpeg" height="300" width="300">&nbsp;&nbsp;&nbsp;
    <img src="./../images/reserv2.jpg" height="300" width="300">&nbsp;&nbsp;&nbsp;
    <img src="./../images/reserv3.jpeg" height="300" width="500">&nbsp;&nbsp;&nbsp;
