--- a/pages/live-performance.html
+++ b/pages/live-performance.html
@@ -5,6 +5,18 @@
 </head>
 <body>
     <h1>Live Performances </h1>
+    <a href="specialities.html">Specialities</a>&nbsp;&nbsp;
+    <a href="bike-parking.html">Bike Parking</a>&nbsp;&nbsp;
+    <a href="car-parking.html">Car Parking</a>&nbsp;&nbsp;
+    <a href="live-performance.html">Live Performance</a>&nbsp;&nbsp;
+    <a href="dancing.html">Dancing</a>&nbsp;&nbsp;
+    <a href="cosy.html">Cosy</a>&nbsp;&nbsp;
+    <a href="outdoor-seating.html">Outdoor Seating</a>&nbsp;&nbsp;
+    <a href="events.html">Events</a>&nbsp;&nbsp;
+    <a href="accept-reservation.html">Accept Reservation</a>&nbsp;&nbsp;
+    <a href="sports.html">Good for watching Sports</a>&nbsp;&nbsp;
+    <br/><br/>
+    <hr/>
     <img src="./../images/singing1.jpg" height="700" width="800"/><br/><br/>
     <img src="./../images/singing2.jpg" height="700" width="800"/><br/><br/>
     <img src="./../images/singing3.jpg" height="700" width="800"/><br/><br/>
