--- a/pages/specialities.html
+++ b/pages/specialities.html
@@ -4,9 +4,19 @@
     <title>Specialities</title>
 </head>
 <body>
-    <h1>Specialities</h1>
     <h1> Special menu of Restaurant </h1>
+    <a href="specialities.html">Specialities</a>&nbsp;&nbsp;
+    <a href="bike-parking.html">Bike Parking</a>&nbsp;&nbsp;
+    <a href="car-parking.html">Car Parking</a>&nbsp;&nbsp;
+    <a href="live-performance.html">Live Performance</a>&nbsp;&nbsp;
+    <a href="dancing.html">Dancing</a>&nbsp;&nbsp;
+    <a href="cosy.html">Cosy</a>&nbsp;&nbsp;
+    <a href="outdoor-seating.html">Outdoor Seating</a>&nbsp;&nbsp;
+    <a href="events.html">Events</a>&nbsp;&nbsp;
+    <a href="accept-reservation.html">Accept Reservation</a>&nbsp;&nbsp;
+    <a href="sports.html">Good for watching Sports</a>&nbsp;&nbsp;
     <br/><br/>
+    <hr/>
     <img src="./../images/food1.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
     <img src="./../images/food2.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
     <img src="./../images/food3.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
