--- a/Menu.html
+++ b/Menu.html
@@ -4,6 +4,14 @@
         hotel menu
     </title>
     <body>
+        <h1>
+            <b><u>
+                Rajeshahi Family Restaurant
+            </u></b>
+            <a href="index.html">home</a>&nbsp;&nbsp;
+            <a href="/pages/Gallery.html"></a>&nbsp;&nbsp;
+            <a href="/pages/contact.html"></a>&nbsp;&nbsp;
+        </h1>
       <h1><i>
         Welcome To Hotel Menu Section
       </i></h1>
