all files are added

--- a/Menu.html
+++ b/Menu.html
@@ -5,14 +5,29 @@
     </title>
     <body>
         <h1>
-            <b><u>
-                Rajeshahi Family Restaurant
-            </u></b>
-            <a href="index.html">home</a>&nbsp;&nbsp;
-            <a href="/pages/Gallery.html"></a>&nbsp;&nbsp;
-            <a href="/pages/contact.html"></a>&nbsp;&nbsp;
-        </h1>
-      <h1><i>
+            <b>
+                Rajeshahi Family Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;
+
+
+            </b></h1>
+            <a href="./../login.html">login</a>&nbsp;&nbsp;
+            <a href="./../index.html">home</a>&nbsp;&nbsp;
+            <a href="./../pages/Gallery.html">Gallery</a>&nbsp;&nbsp;
+            <a href="./../pages/contact.html">contact</a>&nbsp;&nbsp;
+            <a href="./../login.html">login</a>
+      <h1><i><hr>
         Welcome To Hotel Menu Section
       </i></h1>
       <hr>
