nav bar move to the mid

--- a/Menu.html
+++ b/Menu.html
@@ -4,9 +4,7 @@
         hotel menu
     </title>
     <body>
-        <h1>
-            <b>
-                Rajeshahi Family Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <h1><b>Rajeshahi Family Restaurant </b></h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
                 &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
                 &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
@@ -18,15 +16,14 @@
                 &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
                 &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
                 &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;
+                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp; 
 
 
-            </b></h1>
             <a href="./../login.html">login</a>&nbsp;&nbsp;
             <a href="./../index.html">home</a>&nbsp;&nbsp;
             <a href="./../pages/Gallery.html">Gallery</a>&nbsp;&nbsp;
-            <a href="./../pages/contact.html">contact</a>&nbsp;&nbsp;
-            <a href="./../login.html">login</a>
+            <a href="./../pages/contact.html">contact</a>&nbsp;&nbsp;  
+       
       <h1><i><hr>
         Welcome To Hotel Menu Section
       </i></h1>
