new chages added

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -4,29 +4,16 @@
         hotel menu
     </title>
     <body>
-        <h1><b>Rajeshahi Family Restaurant </b></h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;
-                &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp; 
 
-
-            <a href="./../login.html">login</a>&nbsp;&nbsp;
+        <h2><b>Rajeshahi Family Restaurant </b></h2>
+        <a href="./../login.html">login</a>&nbsp;&nbsp;
             <a href="./../index.html">home</a>&nbsp;&nbsp;
             <a href="./../pages/Gallery.html">Gallery</a>&nbsp;&nbsp;
             <a href="./../pages/contact.html">contact</a>&nbsp;&nbsp;  
        
-      <h1><i><hr>
+      <h2><i><hr>
         Welcome To Hotel Menu Section
-      </i></h1>
+      </i></h2>
       <hr>
       <h2>
         <u>Choose The Item</u>
