--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -9,7 +9,7 @@
 
     <h2><i><u>Speciality Of Our foods</u></i></h2>
 
-    <p>Indulge in our hotel's culinary excellence, where every dish is crafted with passion and creativity. From our signature restaurant's gourmet delicacies to the cozy cafe's casual bites and the stylish bar's refreshing drinks, we offer a dining experience to satisfy every palate. Nestled in the heart of <b>PUNE</b>, we offer elegant event spaces and a commitment to sustainability.Our commitment to using fresh, locally sourced ingredients ensures that each meal is a celebration of flavor and quality. Whether you're savoring a fine dining experience or enjoying a relaxed meal, our food specialties promise to elevate your stay with us.</p><br/>
+    <p>Indulge in our hotel's culinary excellence, where every dish is crafted with passion and creativity. From our signature restaurant's gourmet delicacies to the cozy cafe's casual bites and the stylish bar's refreshing drinks, we offer a dining experience to satisfy every palate. Nestled in the heart of <b>Rajeshahi Resturant ,PUNE</b>, we offer elegant event spaces and a commitment to sustainability.Our commitment to using fresh, locally sourced ingredients ensures that each meal is a celebration of flavor and quality. Whether you're savoring a fine dining experience or enjoying a relaxed meal, our food specialties promise to elevate your stay with us.</p><br/>
 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
