Hotel Name changed

--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -233,7 +233,7 @@
 
     <p>For Booking <a href="login.html">Click Here</a></p>
 
-    <h2><i><u>TOP 5 Reasons To Visit Feat & Flavor</u></i></h2><br/>
+    <h2><i><u>TOP 5 Reasons To Visit Rajeshahi Resturant</u></i></h2><br/>
 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
