--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -304,7 +304,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;
 
-    <b>Remains Constant At All Feat  And Flavor</b><br/>
+    <b>Remains Constant At All Rajeshahi Resturant</b><br/>
 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
