px & space added

--- a/pages/Highlight.html
+++ b/pages/Highlight.html
@@ -26,19 +26,19 @@
     <h4>Explore Restaurant Highlights</h4>
     <br/><br/>
     <div>
-        <img src="./../images/Main-dish.jpg" height="80" width="100">
+        <img src="./../images/Main-dish.jpg" height="80px" width="100px">
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="./../images/bike-parking.webp" height="80" width="100" >
+        <img src="./../images/bike-parking.webp" height="80px" width="100px" >
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="./../images/car-parking.jpeg" height="80" width="100">
+        <img src="./../images/car-parking.jpeg" height="80px" width="100px">
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="./../images/karaoke.png" height="80" width="100">
+        <img src="./../images/karaoke.png" height="80px" width="100px">
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="./../images/dance.gif" height="80" width="100"> 
+        <img src="./../images/dance.gif" height="80px" width="100px"> 
 
         <p>
           <a href="specialities.html" ><i><b>Specialities</b></i></a>
@@ -58,19 +58,19 @@
     </div>
     <br/><br/><br/><br/><br/><br/>
     <div>
-        <img src="./../images/cosy.jpg" height="100" width="100">
+        <img src="./../images/cosy.jpg" height="100px" width="100px">
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="./../images/outdoor.png" height="80" width="100">
+        <img src="./../images/outdoor.png" height="80px" width="100px">
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="./../images/events.jpg" height="80" width="100">
+        <img src="./../images/events.jpg" height="80px" width="100px">
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="./../images/reserved.png" height="80" width="100">
+        <img src="./../images/reserved.png" height="80px" width="100px">
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="./../images/sports-ball.png" height="80" width="100">
+        <img src="./../images/sports-ball.png" height="80px" width="100px">
 
         <p>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
