--- a/pages/sports.html
+++ b/pages/sports.html
@@ -5,21 +5,21 @@
 </head>
 <body>
     <h2>Good for watching sports</h2>
-    <a href="specialities.html">Specialities</a>&nbsp;&nbsp;
-    <a href="bike-parking.html">Bike Parking</a>&nbsp;&nbsp;
-    <a href="car-parking.html">Car Parking</a>&nbsp;&nbsp;
-    <a href="live-performance.html">Live Performance</a>&nbsp;&nbsp;
-    <a href="dancing.html">Dancing</a>&nbsp;&nbsp;
-    <a href="cosy.html">Cosy</a>&nbsp;&nbsp;
-    <a href="outdoor-seating.html">Outdoor Seating</a>&nbsp;&nbsp;
-    <a href="events.html">Events</a>&nbsp;&nbsp;
-    <a href="accept-reservation.html">Accept Reservation</a>&nbsp;&nbsp;
-    <a href="sports.html">Good for watching Sports</a>&nbsp;&nbsp;
+    <a href="specialities.html">Specialities</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="bike-parking.html">Bike Parking</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="car-parking.html">Car Parking</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="live-performance.html">Live Performance</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="dancing.html">Dancing</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="cosy.html">Cosy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="outdoor-seating.html">Outdoor Seating</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="events.html">Events</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="accept-reservation.html">Accept Reservation</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="sports.html">Good for watching Sports</a>
     <br/><br/>
     <hr/>
-    <img src="./../images/sport1.jpg" height="500" width="500">&nbsp;&nbsp;&nbsp;
-    <img src="./../images/sport2.jpg" height="500" width="500">&nbsp;&nbsp;&nbsp;
-    <img src="./../images/sport3.jpg" height="500" width="500">&nbsp;&nbsp;&nbsp;
+    <img src="./../images/sport1.jpg" height="500px" width="500px">&nbsp;&nbsp;&nbsp;
+    <img src="./../images/sport2.jpg" height="500px" width="500px">&nbsp;&nbsp;&nbsp;
+    <img src="./../images/sport3.jpg" height="500px" width="500px">&nbsp;&nbsp;&nbsp;
     <video
     controls
     loop
