--- a/pages/specialities.html
+++ b/pages/specialities.html
@@ -5,29 +5,29 @@
 </head>
 <body>
     <h1> Special menu of Restaurant </h1>
-    <a href="specialities.html">Specialities</a>&nbsp;&nbsp;
-    <a href="bike-parking.html">Bike Parking</a>&nbsp;&nbsp;
-    <a href="car-parking.html">Car Parking</a>&nbsp;&nbsp;
-    <a href="live-performance.html">Live Performance</a>&nbsp;&nbsp;
-    <a href="dancing.html">Dancing</a>&nbsp;&nbsp;
-    <a href="cosy.html">Cosy</a>&nbsp;&nbsp;
-    <a href="outdoor-seating.html">Outdoor Seating</a>&nbsp;&nbsp;
-    <a href="events.html">Events</a>&nbsp;&nbsp;
-    <a href="accept-reservation.html">Accept Reservation</a>&nbsp;&nbsp;
-    <a href="sports.html">Good for watching Sports</a>&nbsp;&nbsp;
+    <a href="specialities.html">Specialities</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="bike-parking.html">Bike Parking</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="car-parking.html">Car Parking</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="live-performance.html">Live Performance</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="dancing.html">Dancing</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="cosy.html">Cosy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="outdoor-seating.html">Outdoor Seating</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="events.html">Events</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="accept-reservation.html">Accept Reservation</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="sports.html">Good for watching Sports</a>
     <br/><br/>
     <hr/>
-    <img src="./../images/food1.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
-    <img src="./../images/food2.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
-    <img src="./../images/food3.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
-    <img src="./../images/food4.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
-    <img src="./../images/food5.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
-    <img src="./../images/food6.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
-    <img src="./../images/food7.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
-    <img src="./../images/food 8.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
-    <img src="./../images/food9.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
-    <img src="./../images/food10.jpg" height="500" width="500"/>&nbsp;&nbsp;&nbsp;
-    <img src="./../images/food11.webp" height="500" width="800"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food1.jpg" height="500px" width="500px"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food2.jpg" height="500px" width="500px"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food3.jpg" height="500px" width="500px"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food4.jpg" height="500px" width="500px"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food5.jpg" height="500px" width="500px"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food6.jpg" height="500px" width="500px"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food7.jpg" height="500px" width="500px"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food 8.jpg" height="500px" width="500px"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food9.jpg" height="500px" width="500px"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food10.jpg" height="500px" width="500px"/>&nbsp;&nbsp;&nbsp;
+    <img src="./../images/food11.webp" height="500px" width="800px"/>&nbsp;&nbsp;&nbsp;
     
 
     
